--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,9 +37,9 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | toLower() }}/scoreboard:latest
-            ghcr.io/${{ github.repository_owner | toLower() }}/scoreboard:${{ github.sha }}
-            ghcr.io/${{ github.repository_owner | toLower() }}/scoreboard:${{ github.ref_name }}
+            ghcr.io/${{ toLower(github.repository_owner) }}/scoreboard:latest
+            ghcr.io/${{ toLower(github.repository_owner) }}/scoreboard:${{ github.sha }}
+            ghcr.io/${{ toLower(github.repository_owner) }}/scoreboard:${{ github.ref_name }}
 
       - name: Login to Docker Hub (optional)
         if: ${{ secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN }}
