--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build --turbopack",
+  "build": "next build",
     "start": "cross-env NODE_ENV=production node server.js",
     "prod": "npm run build && cross-env NODE_ENV=production node server.js",
     "lint": "eslint",
