ci: persist SQLite DB to ./data/dev.db via compose env and volume

--- a/docker-compose.remote.yml
+++ b/docker-compose.remote.yml
@@ -15,7 +15,8 @@ services:
       - "3000:3000"
     environment:
       NODE_ENV: production
-      DATABASE_URL: "file:./dev.db"
+      # Persist DB inside ./data on the host so it survives container recreates
+      DATABASE_URL: "file:./data/dev.db"
       OBS_HOST: "192.168.1.120" # Cambia con IP della macchina con OBS
       OBS_PORT: "4455"
       OBS_PASSWORD: "123456"
