db: add seed for ObsSetting and run prisma db seed at startup

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint",
     "test": "vitest -u"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "prisma": "^6.17.1",
