admin: add penalties to summary banner; gitignore: ignore prisma dev db and workspace files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# local sqlite databases
+/prisma/*.db
+/prisma/*.db-journal
+
+# VS Code workspace files
+*.code-workspace
